Made a shady fix to get rid of the white space on the sides of the componenetss, will be attempting to find a better fix, made it all mroe responsive for mobile use

--- a/clicklad-app/app/globals.css
+++ b/clicklad-app/app/globals.css
@@ -1,5 +1,5 @@
 :root {
-  --max-width: 1100px;
+  --max-width: 100%;
   --border-radius: 12px;
   --font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono",
     "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Source Code Pro",
@@ -77,6 +77,8 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  overflow-x: hidden;
+
 }
 
 html,
